<resources>
    <string name="app_name">Activity 4</string>
    <string name="tEmail">Email :</string>
    <string name="var1">Ini Pesan</string>
    <string name="bSignin">Sign-in</string>
    <string name="tlogin">LOGIN</string>
    <string name="tPassword">Password :</string>
    <string name="tData">Data Anda</string>
    <string name="txEmail">Hasil Email</string>
    <string name="txPassword">Hasil Password</string>
    <string name="header2">Layar Kedua</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masuukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kemabali</string>
    <string name="ealamat">Masukkan Alamat</string>


</resources>